correct spacing between elements

--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body {
 }
 .cart-img {
   position: absolute;
-  top: -8px;
-  right: 3px;
+  top: 20px;
+  right: 7px;
 }
 .num {
   color: #fff;
@@ -52,13 +52,29 @@ body {
   font-size: 14px;
   font-weight: 400;
 }
+
 .phone-holder {
   display: flex;
   align-items: center;
+  
 }
 .button {
   background-color: #FF7400;
   text-decoration: none;
   color: #fff;
   padding: 14px 18px;
+}
+.header-down {
+  position: relative;
+}
+.header-title {
+  color: #D67E35;
+  font-family: 'Tinos', serif;
+  font-weight: 400;
+  font-size: 50px;
+
+  text-align: center;
+  position: absolute;
+  left: 0;
+  margin-top: 222px;
 }
